<resources>
    <string name="app_name">Peliculas</string>
    <string name="how_to_train_your_dragon_3_the_hidden_world">How To Train Your Dragon 3: The Hidden World</string>
    <string name="han_pasado_5_a_os_y_ahora_los_ciudadanos_enfrentan_una_nueva_amenaza_invasores_lego_duplo_del_espacio_exterior">Han pasado 5 años y ahora los ciudadanos enfrentan una nueva amenaza: invasores LEGO DUPLO® del espacio exterior.</string>
    <string name="green_book">Green Book</string>
    <string name="the_lego_movie_2_the_second_part">The Lego Movie 2: The Second Part</string>
    <string name="un_pianista_negro_contrata_a_un_italoamericano_para_que_sea_su_chofer_y_guardaespaldas_durante_una_gira_por_el_sur_de_los_eua_en_1962">Un pianista negro contrata a un italoamericano para que sea su chofer y guardaespaldas durante una gira por el sur de los EUA en 1962.</string>
    <string name="cuando_hipo_descubre_que_chimuelo_no_es_el_nico_furia_nocturna_debe_ir_en_busca_del_mundo_oculto">Cuando Hipo descubre que Chimuelo no es el único Furia Nocturna, debe ir en busca del mundo oculto.</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>
